src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Age__c</fullName>
        <description>How many days have elapsed since this account was created?</description>
        <formula>Today () -   DATEVALUE(CreatedDate)</formula>
        <inlineHelpText>How many days have elapsed since this account was created?</inlineHelpText>
        <label>Account Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Business_Days_in_Month__c</fullName>
        <formula>CASE(MOD( First_of_Month__c - DATE(1985,6,24),7),
0 , CASE( MOD(  Account_Last_of_Month__c  - First_of_Month__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD( Account_Last_of_Month__c  - First_of_Month__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( Account_Last_of_Month__c  - First_of_Month__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( Account_Last_of_Month__c  - First_of_Month__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( Account_Last_of_Month__c  - First_of_Month__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( Account_Last_of_Month__c  - First_of_Month__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( Account_Last_of_Month__c  - First_of_Month__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( Account_Last_of_Month__c - First_of_Month__c )/7)*5)</formula>
        <label>REPORT: Business Days in Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Count__c</fullName>
        <description>For reporting purposes only; not on layouts</description>
        <formula>1</formula>
        <inlineHelpText>For reporting purposes only; not on layouts</inlineHelpText>
        <label>REPORT Account Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_First_of_Month_Formula__c</fullName>
        <formula>Date(Year(TODAY()),Month(TODAY()),1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REPORT: First of Month Formula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Last_of_Month_Formula__c</fullName>
        <formula>Date(Year(TODAY()),Month(TODAY()), IF(Month(TODAY())=12, 31,DAY(DATE(YEAR( TODAY()),MONTH(TODAY())+1,1) - 1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REPORT: Last of Month Formula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Last_of_Month__c</fullName>
        <label>REPORT: Last of Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Health_Score_Flag__c</fullName>
        <description>Account Manager Health Score flag, based on AM Health score value</description>
        <formula>IF( ISPICKVAL(Account_Manager_Health_Score__c, &apos;2-Bad&apos;), 
IMAGE(&quot;/resource/1379452927000/CS_Flag_Red&quot;, &quot;MISSED - SLA&quot;, 20, 20), 
IF ( ISPICKVAL(Account_Manager_Health_Score__c, &apos;4- Excellent&apos;), 
IMAGE(&quot;/resource/1379452927000/CS_Flag_Green&quot;, &quot;Within SLA&quot;, 20, 20), 
IF( ISPICKVAL(Account_Manager_Health_Score__c, &apos;3- Good&apos;), 
IMAGE(&quot;/resource/1379452927000/CS_Flag_Yellow&quot;, &quot;Pending - SLA&quot;, 20, 20), 
IF( ISPICKVAL(Account_Manager_Health_Score__c, &apos;1- Awful&apos;), 
IMAGE(&quot;/resource/1405031526000/Blackflag&quot;, &quot;Within SLA&quot;, 20, 20), 
&apos;None&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager Health Score Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Health_Score__c</fullName>
        <description>Account Manager Health Score</description>
        <inlineHelpText>Account Manager Health Score</inlineHelpText>
        <label>Account Manager Health Score</label>
        <picklist>
            <picklistValues>
                <fullName>4- Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3- Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2- Bad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1- Awful</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Unique_ID__c</fullName>
        <description>For reporting purposes: modifies the Salesforce ID to be a non case sensitive version so there are no duplicates in Excel</description>
        <formula>CASESAFEID( Id )</formula>
        <inlineHelpText>For reporting purposes: modifies the Salesforce ID to be a non case sensitive version so there are no duplicates in Excel</inlineHelpText>
        <label>Account Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acquisition_Campaign__c</fullName>
        <description>Acqusition Campaign that the account is associated with. Populated from lead convert.</description>
        <inlineHelpText>Acqusition Campaign that the account is associated with. Populated from lead convert.</inlineHelpText>
        <label>zACQ Acquisition Campaign</label>
        <picklist>
            <picklistValues>
                <fullName>3D Cart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AmeriCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AmmoSeek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CoreCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interspire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MagentoGo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NetSuite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSCommerceSpace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OS Commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProStores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Texas Fashion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volusion 28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar 2.5.13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X-Cart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YahooStores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YahooStores2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zoovy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active_Account_Owner__c</fullName>
        <formula>IF(  Owner.IsActive  = TRUE, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <label>zActive Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_MRR_Value_Opp__c</fullName>
        <description>Rollup of active opportunity MRR total</description>
        <inlineHelpText>Rollup of active opportunity MRR total</inlineHelpText>
        <label>Active MRR Value (Opp)</label>
        <summarizedField>Opportunity.MonthlyRecurringRevenue__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Store Purchase</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Active_MRR_Value__c</fullName>
        <label>zActive MRR Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Active_Stores_Opp__c</fullName>
        <description>Number of Active purchased stores (total number of active store purchase opportunities).</description>
        <inlineHelpText>Number of Active purchased stores (total number of active store purchase opportunities).</inlineHelpText>
        <label>Active Stores (Opp)</label>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Store Purchase</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Purchased</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Active_Stores__c</fullName>
        <description>Number of stores with status of Active or Suspended</description>
        <inlineHelpText>Number of stores with status of Active or Suspended - DO NOT USE - Use Active Stores (Opp) Instead</inlineHelpText>
        <label>zActive Stores</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Trials_Opp__c</fullName>
        <description>Number of trial Opportunities</description>
        <label>Active Trials (Opp)</label>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Trial</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.MBASubscriptionID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Active_Trials__c</fullName>
        <description>Used by Hubspot, updated via WFR, don&apos;t delete, but use the &quot;Opps&quot; field for reportinga</description>
        <inlineHelpText>Use Active Trials (Opps) for reporting - maintain because used by Hubspot, updated via WFR,</inlineHelpText>
        <label>zMKT Active Trials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <description>SBD Agency. For use by the SBD team.</description>
        <inlineHelpText>SBD Agency. For use by the SBD team.</inlineHelpText>
        <label>zSBD Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppDeveloperContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Contact</description>
        <inlineHelpText>Primary Contact</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (App Developer Contact)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>App_Developer_Status__c</fullName>
        <description>Manually updated. Used to indicate whether an account associated with an app developer is a preferred or standard account.</description>
        <inlineHelpText>If this account is associated with an app developer, is it a standard of preferred app developer?</inlineHelpText>
        <label>PAR: App Developer Status</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>App_Send_Rev_Share_Email__c</fullName>
        <description>Populated by batch apex class; sets off workflow to send app rev share emails.</description>
        <inlineHelpText>Populated by batch apex class; sets off workflow to send app rev share emails.</inlineHelpText>
        <label>App: Send Rev Share Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment_Notes__c</fullName>
        <description>BizDev</description>
        <label>zSBD Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Assign_To_Team__c</fullName>
        <description>Team to which the LDR would like to round robin the Account</description>
        <inlineHelpText>Team to which the LDR would like to round robin the Account</inlineHelpText>
        <label>LDR Assign To Team</label>
        <picklist>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC Direct</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BigCommerce_Mojo_Meter__c</fullName>
        <description>for partner team</description>
        <inlineHelpText>Unknown:No contact to discuss goals
Sustaining:eCom not big portion of business, no plans/means to increase
Nurture:Use BC/Other platforms;No platform loyalty;May need features/dev from Product
Grow - Potential for big opp;Partner choosing platform</inlineHelpText>
        <label>zBigCommerce Mojo Meter</label>
        <picklist>
            <picklistValues>
                <fullName>Not Contacted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sustaining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BigCommerce Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Attempted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Blockers__c</fullName>
        <label>zBlockers</label>
        <picklist>
            <picklistValues>
                <fullName>BC Platform Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Barrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Bandwidth Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor In-Trial Client Success Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Feature/Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk of Migration Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Account</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <description>BizDev</description>
        <label>zBudget</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Case_Needed__c</fullName>
        <description>This is used when a partner rep determines that management should consider a product/dev related change to accommodate a partner.</description>
        <inlineHelpText>This is used when a partner rep determines that management should consider a product/dev related change to accommodate a partner.</inlineHelpText>
        <label>zPAR Business Case Needed</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <description>Partner business type. For use by the partner team.</description>
        <inlineHelpText>Partner business type. For use by the partner team.</inlineHelpText>
        <label>zPAR Business Type</label>
        <picklist>
            <picklistValues>
                <fullName>Independent Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Franchise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Franchise/Independent Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Franchise/Production Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Center/Independent Consultant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Campaign__c</fullName>
        <description>Channel partner campaign. For use by the partner team.</description>
        <inlineHelpText>Channel partner campaign. For use by the partner team.</inlineHelpText>
        <label>zPAR Channel Partner Campaign</label>
        <picklist>
            <picklistValues>
                <fullName>ProStores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yahoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Catalyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aussie Design Prospect Campaign</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Store_Count__c</fullName>
        <description>Active stores for the partner. Manually updated. For use by the partner team.</description>
        <inlineHelpText>Active stores for the partner. Manually updated. For use by the partner team.</inlineHelpText>
        <label>zPAR Channel Partner Store Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Churn_Identified_Risk_Date__c</fullName>
        <description>On what date was the Est Churn date set?</description>
        <inlineHelpText>On what date was the Est Churn date set?</inlineHelpText>
        <label>Churn Identified Risk Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Churn_Risk_Assessment__c</fullName>
        <description>Churn triggers/indicators - populated by the Account Management team.</description>
        <inlineHelpText>Churn triggers/indicators - populated by the Account Management team.</inlineHelpText>
        <label>Churn Risk Assessment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Age__c</fullName>
        <description>Number of days between today and the account &quot;client start date&quot;</description>
        <formula>TODAY() -  Client_Start_Date__c</formula>
        <inlineHelpText>Number of days between today and the account &quot;client start date&quot;</inlineHelpText>
        <label>Client Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date of the client&apos;s first store purchase with Bigcommerce</description>
        <inlineHelpText>Date of the client&apos;s first store purchase with Bigcommerce</inlineHelpText>
        <label>Client Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Warning_Level__c</fullName>
        <description>Field used by Client Success to track clients who may be eligible for termination</description>
        <inlineHelpText>Field used by Client Success to track clients who may be eligible for termination</inlineHelpText>
        <label>Client Warning Level</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_reference_store_count__c</fullName>
        <description>How many of this account&apos;s stores are participating in the Client Reference Program?</description>
        <inlineHelpText>How many of this account&apos;s stores are participating in the Client Reference Program?</inlineHelpText>
        <label>Client Reference Store Count</label>
        <summaryFilterItems>
            <field>Opportunity.Client_Reference_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Closed_Migration_Cases__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of migration cases with status of closed or completed</description>
        <inlineHelpText>Count of migration cases with status of closed or completed. Used in Marketing Hubspot workflows.</inlineHelpText>
        <label>MKT # Closed Migration Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Partner comments. For use by the partner team.</description>
        <inlineHelpText>Partner comments. For use by the partner team.</inlineHelpText>
        <label>zPAR Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commission_Structure__c</fullName>
        <description>Partner commission structure. For partner team use.</description>
        <inlineHelpText>Partner commission structure. For partner team use.</inlineHelpText>
        <label>zPAR Commission Structure</label>
        <picklist>
            <picklistValues>
                <fullName>Bounty Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission + Bounty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reoccurring Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue Share</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Compelling_Event__c</fullName>
        <description>BizDev</description>
        <inlineHelpText>What is driving need?</inlineHelpText>
        <label>zSBD Compelling Event</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Effective_Date__c</fullName>
        <description>Revenue share field used by finance and bizdev</description>
        <label>zContract Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Converted_LeadId__c</fullName>
        <label>zOLD Converted LeadId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_Lead_Creation_Date__c</fullName>
        <description>Used by SOps for reporting - Mapped to lead filed &quot;Lead Created Date&quot;</description>
        <inlineHelpText>Indicates the lead created date, if the account was created from lead convert. Populated on lead convert.</inlineHelpText>
        <label>Converted Lead Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Core_Competencies__c</fullName>
        <label>zCore Competencies</label>
        <picklist>
            <picklistValues>
                <fullName>API</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hourly Tweaks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Count_of_MBA_Subs__c</fullName>
        <description>Count of Opportunities connected to MBA</description>
        <inlineHelpText>How many one time product and store opportunities (trial and paid) are associated with the account.</inlineHelpText>
        <label>Count of MBA Opps</label>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>One-Time Product, Store Purchase, Trial</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Critical_Success_Factors__c</fullName>
        <description>BizDev</description>
        <inlineHelpText>Should this be a picklist or text?</inlineHelpText>
        <label>zCritical Success Factors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Datanyze_Address__c</fullName>
        <label>Datanyze Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datanyze_Alexa_rank__c</fullName>
        <label>Datanyze Alexa rank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datanyze_City__c</fullName>
        <label>Datanyze City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datanyze_Country__c</fullName>
        <label>Datanyze Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datanyze_Domain_History__c</fullName>
        <label>Datanyze Domain History</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Datanyze_Domain_Tech__c</fullName>
        <label>Datanyze Domain Tech</label>
        <length>2550</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Datanyze_Employee_No__c</fullName>
        <label>Datanyze Employee No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datanyze_Found_Match__c</fullName>
        <description>Did Datanyze find a match for this account?</description>
        <formula>IF(NOT(ISBLANK(Datanyze_Alexa_rank__c)),TRUE,FALSE)</formula>
        <inlineHelpText>Did Datanyze find a match for this account?</inlineHelpText>
        <label>Datanyze Found Match?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Datanyze_Founder_Year__c</fullName>
        <label>Datanyze Founder Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datanyze_Funding__c</fullName>
        <label>Datanyze Funding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datanyze_GMV_Score__c</fullName>
        <description>Datanyze GMV Score</description>
        <inlineHelpText>Datanyze GMV Score</inlineHelpText>
        <label>Datanyze GMV Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datanyze_Grade__c</fullName>
        <description>Datanyze Grade - mapped from lead</description>
        <inlineHelpText>Datanyze Grade - mapped from lead</inlineHelpText>
        <label>Datanyze Grade</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Datanyze_Industry__c</fullName>
        <label>Datanyze Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datanyze_Phone__c</fullName>
        <label>Datanyze Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datanyze_Platform__c</fullName>
        <label>Datanyze Platform</label>
        <picklist>
            <picklistValues>
                <fullName>Bigcommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yahoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prostores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Woocommerce</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Datanyze_Public_or_not__c</fullName>
        <label>Datanyze Public or not</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datanyze_Revenue__c</fullName>
        <label>Datanyze Revenue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datanyze_Score__c</fullName>
        <description>Datanyze Score - mapped from lead</description>
        <inlineHelpText>Datanyze Score - mapped from lead</inlineHelpText>
        <label>Datanyze Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Datanyze_State__c</fullName>
        <label>Datanyze State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datanyze_Zip__c</fullName>
        <label>Datanyze Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Survey_Sent__c</fullName>
        <inlineHelpText>Created by &quot;Sales Optimizer&quot; in 2012. If you are using this field, tell Maria what you&apos;re using it for!</inlineHelpText>
        <label>zDate of Last Survey Sent</label>
        <type>Date</type>
    </fields>
</CustomObject>